modified:   problems/Solutions/Solution.ipynb

--- a/problems/Solutions/Solution.ipynb
+++ b/problems/Solutions/Solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -17,13 +17,16 @@
     "# 两数之和\n",
     "\n",
     "class Solutions(object):\n",
+    "    def __init__(self, nums: list[int], target: int):\n",
+    "        self.nums = nums\n",
+    "        self.target = target\n",
     "    \n",
-    "    def twoSum(self, nums: list[int], target: int) -> list[int]:\n",
+    "    def twoSum(self) -> list[int]:\n",
     "        records = dict()\n",
     "    \n",
-    "        for index, value in enumerate(nums):\n",
-    "            if target - value in records:   # 遍历当前元素，并在map中寻找是否有匹配的key\n",
-    "                return [records[target - value], index]\n",
+    "        for index, value in enumerate(self.nums):\n",
+    "            if self.target - value in records:   # 遍历当前元素，并在map中寻找是否有匹配的key\n",
+    "                return [records[self.target - value], index]\n",
     "            else:\n",
     "                records[value] = index   # 如果没找到匹配对，就把访问过的元素和下标加入到map中\n",
     "        return ['none']\n",
@@ -33,9 +36,12 @@
     "# 因为 nums[0] + nums[1] = 2 + 7 = 9\n",
     "# 所以返回 [0, 1]\n",
     "\n",
-    "test = Solutions()\n",
-    "result1 = test.twoSum([2, 7, 11, 15], 9)\n",
-    "result2 = test.twoSum([2, 7, 11, 15], 10)\n",
+    "test1 = Solutions([2, 7, 11, 15], 9)\n",
+    "test2 = Solutions([2, 7, 11, 15], 10)\n",
+    "\n",
+    "result1 = test1.twoSum()\n",
+    "result2 = test2.twoSum()\n",
+    "\n",
     "print(result1, result2)\n"
    ]
   }
