--- a/problems/Solutions/Solution.ipynb
+++ b/problems/Solutions/Solution.ipynb
@@ -22,7 +22,7 @@
     "        self.target = target\n",
     "    \n",
     "    def twoSum(self) -> list[int]:\n",
-    "        records = dict()\n",
+    "        records = dict()   # create a dictionary named records\n",
     "    \n",
     "        for index, value in enumerate(self.nums):\n",
     "            if self.target - value in records:   # 遍历当前元素，并在map中寻找是否有匹配的key\n",
