modified:   problems/Solutions/Solution.ipynb

--- a/problems/Solutions/Solution.ipynb
+++ b/problems/Solutions/Solution.ipynb
@@ -31,7 +31,7 @@
     "                records[value] = index   # 如果没找到匹配对，就把访问过的元素和下标加入到map中\n",
     "        return ['none']\n",
     "    \n",
-    "# test:\n",
+    "# Test:\n",
     "# 给定 nums = [2, 7, 11, 15], target = 9\n",
     "# 因为 nums[0] + nums[1] = 2 + 7 = 9\n",
     "# 所以返回 [0, 1]\n",
